# BR_web

./: .dockerignore  .gitignore  LICENSE  README.md  app.py  main.py  main_synchronous.py  mongod.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  run_test.py  server.py  vercel.json
.github/workflows/: python-app.yml
docker/: Dockerfile  docker-compose.yml
scripts/: create_config.py  create_venv.py
src/app/: shielding.py  templates.py  validators.py
src/app/database/: blog.py  database.py  models.py
src/app/fastapi/: api.py  auth.py  auth_api.py  auth_utils.py  background.py  base.py  blog.py  blog_api.py  indexing.py  main_router.py  telegram.py
src/app/telegram/: message.py  (+3 more)
src/backend/: cmd.py
src/config/: config.py
src/database/: blog.py  database.py  db_initialisation.py  db_utils.py  models.py
src/fastapi_app/: api.py  auth.py  auth_api.py  auth_utils.py  base.py  blog.py  blog_api.py  indexing.py  models.py  roles_api.py  telegram.py
src/frontend/: frontend.py  jest.config.js  tailwind.config.js
src/language/: language.py
src/logger/: default_logger.py  logger.py  logger_decorator.py  record_log.py
src/static/: index.html  robots.txt  sitemap.xml
src/telegram/: informant.py  message.py
src/templates/: about.html  base.html  code.html  contact.html  content_used.html  cookie_policy.html  index.html  login.html  post.html  post_list.html  privacy_policy.html  profile.html  project.html  register.html  site_map.html  terms_of_use.html
src/tests/: test_background.py  test_codes.py  test_pages.py  test_telegram.py
(+124 files in other folders)
