[project]
name = "br-web"
version = "2.0.0"
description = "Основна сторінка Radomyra "
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "bleach>=6.3.0",
    "fastapi>=0.129.0",
    "httpx==0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "pydantic-settings>=2.13.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "pymongo>=4.16.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "starlette>=0.52.1",
    "toml>=0.10.2",
    "uvicorn>=0.40.0",
]
